# RotationFPGAKernels

./: .gitignore  CMakeLists.txt  Makefile  Makefile_K2K  README.md  config.cfg  helper.h  hlsStream.rpt  hlsStreamV1.5.rpt  hlsStreamV2.rpt  hlsStreamV3.rpt  hlsStreamV4PipelineWorking.rpt  hls_config.cfg  host.cpp  hostDuo.cpp
hlsProject/: CMakeLists.txt  NNFakeOverlap_bridge.cpp  NNFakeOverlap_test.cpp  config.cfg  hls4ml_config.yml  keras_model.h5  myproject_test.cpp  project.tcl
hlsProject/firmware/: NNFakeOverlap.cpp  NNFakeOverlap.h  defines.h  myproject.cpp  myproject.h  parameters.h
hlsProject/firmware/weights/: b2.h  b2.txt  b4.h  b4.txt  b5.h  b5.txt  b7.h  b7.txt  b8.h  b8.txt  s4.h  s4.txt  s7.h  s7.txt  w2.h  w2.txt  w5.h  w5.txt  w8.h  w8.txt
rotationKernel/: config.cfg  rotationKernel.cpp  rotationKernel.h
runner/: config.cfg  defines.h  globalDefines.h  hls_config.cfg  runner.cpp  runner.h  runner_test.cpp
template_build/: Makefile  xrt.ini
